Fix overflowing scroll section in Copilot Sources Modal (#4493)
* udpated container styles

* updated class names

--- a/phytoplankton-console/src/pages/case-management/components/Copilot/index.module.less
+++ b/phytoplankton-console/src/pages/case-management/components/Copilot/index.module.less
@@ -17,3 +17,8 @@
   justify-content: space-between;
   width: 100%;
 }
+
+.copilotSourcesWrapper {
+  overflow-x: auto;
+  overflow-y: auto;
+}
